{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 530,
  "lineage": "6fbcef6a-274f-ef4c-c7b7-970a216cda4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops106_terraform_group4_deren_webserver_app_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-005713230b6ef0cb4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005713230b6ef0cb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops106_dertim",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb88f6bee027a972",
            "private_dns": "ip-10-201-1-82.eu-west-1.compute.internal",
            "private_ip": "10.201.1.82",
            "public_dns": "ec2-3-249-39-170.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.249.39.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9c692231f591a39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066e8c7805d4377f5",
            "tags": {
              "Name": "devops106_terraform_group4_deren_app_webserver_0"
            },
            "tags_all": {
              "Name": "devops106_terraform_group4_deren_app_webserver_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b5587e7897eb47e"
            ]
          },
          "dependencies": [
            "aws_security_group.devops106_terraform_group4_deren_sg_app_webserver_tf",
            "aws_subnet.devops106_group4_deren_terraform_subnet_app_webserver_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf",
            "data.template_file.app_init"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0a963d459b967bb62",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a963d459b967bb62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops106_dertim",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09288a39105a5d898",
            "private_dns": "ip-10-201-1-61.eu-west-1.compute.internal",
            "private_ip": "10.201.1.61",
            "public_dns": "ec2-54-74-198-27.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.198.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a4dbad4c8796eab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066e8c7805d4377f5",
            "tags": {
              "Name": "devops106_terraform_group4_deren_app_webserver_1"
            },
            "tags_all": {
              "Name": "devops106_terraform_group4_deren_app_webserver_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b5587e7897eb47e"
            ]
          },
          "dependencies": [
            "aws_security_group.devops106_terraform_group4_deren_sg_app_webserver_tf",
            "aws_subnet.devops106_group4_deren_terraform_subnet_app_webserver_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf",
            "data.template_file.app_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops106_terraform_group4_deren_webserver_db_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0beea93f739742dca",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0beea93f739742dca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops106_dertim",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004936adc298153be",
            "private_dns": "ip-10-201-2-212.eu-west-1.compute.internal",
            "private_ip": "10.201.2.212",
            "public_dns": "ec2-34-249-33-50.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.249.33.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fb9b47504b14ef09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c43a5794394435c",
            "tags": {
              "Name": "devops106_terraform_group4_deren_db_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_group4_deren_db_webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b32edcec005044ae"
            ]
          },
          "dependencies": [
            "aws_security_group.devops106_terraform_group4_deren_sg_db_webserver_tf",
            "aws_subnet.devops106_group4_deren_terraform_subnet_db_webserver_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf",
            "data.template_file.db_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops106_group4_deren_terraform_ig_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-06b8feb4e1932bb73",
            "id": "igw-06b8feb4e1932bb73",
            "owner_id": "135928476890",
            "tags": {
              "Name": "devops106_group4_deren_terraform_ig"
            },
            "tags_all": {
              "Name": "devops106_group4_deren_terraform_ig"
            },
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "dependencies": [
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops106_group4_deren_terraform_nacl_app_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-04cdbc42149aa2888",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-04cdbc42149aa2888",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-066e8c7805d4377f5"
            ],
            "tags": {
              "Name": "devops106_group4_deren_terraform_nacl_app_public"
            },
            "tags_all": {
              "Name": "devops106_group4_deren_terraform_nacl_app_public"
            },
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.devops106_group4_deren_terraform_subnet_app_webserver_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops106_group4_deren_terraform_nacl_public_db_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0134efb039eb6d620",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0134efb039eb6d620",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-01c43a5794394435c"
            ],
            "tags": {
              "Name": "devops106_group4_deren_terraform_nacl_db_public"
            },
            "tags_all": {
              "Name": "devops106_group4_deren_terraform_nacl_db_public"
            },
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.devops106_group4_deren_terraform_subnet_db_webserver_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops106_group4_deren_terraform_rt_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0d63ea83bd4600812",
            "id": "rtb-0d63ea83bd4600812",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b8feb4e1932bb73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops106_group4_deren_terraform_rt_public"
            },
            "tags_all": {
              "Name": "devops106_group4_deren_terraform_rt_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops106_group4_deren_terraform_ig_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops106_group4_deren_terraform_rt_assoc_app_public_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd8768dcc9f93b8c",
            "route_table_id": "rtb-0d63ea83bd4600812",
            "subnet_id": "subnet-066e8c7805d4377f5"
          },
          "dependencies": [
            "aws_internet_gateway.devops106_group4_deren_terraform_ig_tf",
            "aws_route_table.devops106_group4_deren_terraform_rt_public_tf",
            "aws_subnet.devops106_group4_deren_terraform_subnet_app_webserver_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops106_group4_deren_terraform_rt_assoc_db_public_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072b1e5c67b40819e",
            "route_table_id": "rtb-0d63ea83bd4600812",
            "subnet_id": "subnet-01c43a5794394435c"
          },
          "dependencies": [
            "aws_internet_gateway.devops106_group4_deren_terraform_ig_tf",
            "aws_route_table.devops106_group4_deren_terraform_rt_public_tf",
            "aws_subnet.devops106_group4_deren_terraform_subnet_db_webserver_tf",
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops106_terraform_group4_deren_sg_app_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-00b5587e7897eb47e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b5587e7897eb47e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "devops106_terraform_group4_app_sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops106_group4_deren_terraform_sg_app_webserver"
            },
            "tags_all": {
              "Name": "devops106_group4_deren_terraform_sg_app_webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops106_terraform_group4_deren_sg_db_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0b32edcec005044ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b32edcec005044ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "devops106_terraform_group4_deren__db_sg",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops106_terraform_group4_deren_sg_db_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_group4_deren_sg_db_webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops106_group4_deren_terraform_subnet_app_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-066e8c7805d4377f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.201.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066e8c7805d4377f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops106_group4_app_subnet"
            },
            "tags_all": {
              "Name": "devops106_group4_app_subnet"
            },
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "dependencies": [
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops106_group4_deren_terraform_subnet_db_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-01c43a5794394435c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.201.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c43a5794394435c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops106_group4_deren_db_subnet"
            },
            "tags_all": {
              "Name": "devops106_group4_deren_db_subnet"
            },
            "vpc_id": "vpc-09d0e066ba12e8e60"
          },
          "dependencies": [
            "aws_vpc.devops106_group4_deren_terraform_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops106_group4_deren_terraform_vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-09d0e066ba12e8e60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.201.0.0/16",
            "default_network_acl_id": "acl-049fff70763ad3bdf",
            "default_route_table_id": "rtb-09b21af7bb7bcbbe9",
            "default_security_group_id": "sg-003621140217e4a38",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d0e066ba12e8e60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b21af7bb7bcbbe9",
            "owner_id": "135928476890",
            "tags": {
              "Name": "devops106_group4_deren_terraform_vpc"
            },
            "tags_all": {
              "Name": "devops106_group4_deren_terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}